# smplfitter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
benchmark/: README.md  bench_bodymodel.py  bench_converter.py  bench_rotvec.py  plot_results.py  run_benchmark.py
docs/: conf.py  conf_spec.py  howto.rst  index.rst  requirements.txt  smpl_to_smplx.rst
docs/source/: abbrev_long.bib  algorithm.md  conf.py  index.md  index.rst  installation.md  references.bib  smplbodymodel.rst  smplconverter.rst  smplfitter.rst
docs/source/_static/: custom.css
smplfit/: common.py
smplfit/np/: fitting.py  lstsq.py  rotation.py  smpl.py
smplfit/pt/: __init__.py  converter.py  fitting.py  lstsq.py  smpl.py
smplfit/pytorch/: __init__.py  converter.py  fitting.py  lstsq.py  smpl.py
smplfit/tf/: __init__.py  converter.py  fitting.py  lstsq.py  smpl.py
smplfitter/: __init__.py  common.py  ehf.ipynb  timing.ipynb
smplfitter/np/: bodymodel.py
smplfitter/pt/: __init__.py  bodymodel.py  converter.py  fitter.py
smplfitter/tf/: __init__.py  bodymodel.py
src/smplfitter/: __init__.py  _version.py  common.py  download.py
src/smplfitter/decimation/: decimate_body_models.py  make_post_lbs_joint_regressors.py  make_post_lbs_joint_regressors_tf.py
src/smplfitter/jax/: __init__.py  bodyconverter.py  bodyfitter.py  bodymodel.py  lstsq.py  rotation.py
src/smplfitter/nb/: __init__.py  bodyconverter.py  bodyfitter.py  bodymodel.py  lstsq.py  precompile.py  rotation.py  util.py
src/smplfitter/np/: __init__.py  bodyconverter.py  bodyfitter.py  bodymodel.py  lstsq.py  rotation.py  util.py
src/smplfitter/pt/: __init__.py  bodyconverter.py  bodyfitter.py  bodyfitter_opt.py  bodyflipper.py  bodyflipper_opt.py  bodymodel.py  handreplacer.py  lstsq.py  rotation.py
src/smplfitter/tf/: __init__.py  bodyconverter.py  bodyfitter.py  bodymodel.py  lstsq.py  rotation.py  util.py
tests/: conftest.py  test_converter_common.py  test_fitter_common.py  test_forward.py
tests/np/: test_bodymodel.py
tests/pt/: test_bodymodel.py  test_converter.py  test_fitter_grad.py  test_flipper.py
tests/tf/: test_fitter_grad.py
